Added Coats bio and abstract.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -55,17 +55,13 @@
             </li>
 
             <li>
-                <span class="contrib">W. John Coats</span>
-                is the author of <i>The Activity of Politics</i>,
-                <i>A Theory of Republican Character</i>,
-                <i>Statesmanship</i>,
-                <i>Oakeshott and His Contemporaries</i>,
-                <i>Political Theory and Practice</i>,
-                <i>Montaigne's Essais</i>
-                and <i>Armed Force and Moderate Political Life</i>,
-                and co-author of
-                <i>The Poetic Character of Human Activity</i>.
-
+                <span class="contrib">W. J. Coats</span>
+                is Professor of Government at Connecticut College where he
+                teaches courses in the history of Western political theory,
+                ancient, medieval and modern.  He is published widely in the
+                field of political theory, especially with regard to the work
+                of the 20th century, English philosophic essayist, Michael
+                Oakeshott.
             </li>
 
             <li>
