--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -154,7 +154,8 @@
             </li>
 
             <li>
-                Ludwig Wittgenstein: Forms of Life
+                Ludwig Wittgenstein:
+                Forms of Life
                 <br>
                     <a href="bios.html#sportiello">
                     Daniel Sportiello
@@ -169,7 +170,10 @@
             </li>
 
             <li>
-                Michael Oakeshott: Rationalism Is Irrational 
+                Michael Oakeshott:
+                <a href="oakeshott.html">
+                Rationalism Is Irrational 
+                </a>
                 <br />
                     <a href="bios.html#sportiello">
                     John Coats,
