Adding to intro.

--- a/AntiRats/intro.html
+++ b/AntiRats/intro.html
@@ -44,6 +44,8 @@
             The essays on each thinker are intended not merely to offer a
             commentary on that thinker, but also to place him or her in the
             context of this larger stream of anti-rationalist thought.
+            So, while this volume is not a history of anti-rationalist thought,
+            it may contain the intimations of such a history.
         </p>
 
         <p>
@@ -52,7 +54,21 @@
             theorists, urbanists, and philosophers. But there is unity in this
             diversity. Although these diverse authors worked in a variety of
             forms, they all sought to demonstrate the serious limitations in
-            rationalism's description of the human situation.
+            rationalism's description of the human situation. It is our 
+            hope that surveying the variety of perspectives from which
+            rationalism has been attacked will serve to clarify the
+            difficulties the rationalist approach to understanding faces,
+            rather than dispersing our critical attention. In other words, we 
+            hope that these divergent streams flow together into a river,
+            rather than meandering out to sea like the channels of a delta.
+        </p>
+
+        <hr>
+
+        <p>
+            The following as written doesn't really fit in the intro, but I
+            think the ideas in it can find their place in the intro, so I leave
+            it here for the moment:
         </p>
 
         <p>
