Added Berlin abstract.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -165,6 +165,9 @@
 
             <li>
                 Isaiah Berlin:
+                <a href="berlin.html">
+                    Berlin and Moral Monism
+                </a>
                 <br>
                     Jason Ferrell,
                     Concordia University
