Added new bios.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -20,10 +20,12 @@
             </li>
 
             <li>
+                <a name="blake">
                 <span class="contrib">Nathanael Blake</span>
                  earned a PhD in political theory from the
                 Catholic University of America, and has written for a variety
-                of scholarly and popular publications.  He resides in Missouri.
+                of scholarly and popular publications. He resides in Missouri.
+                </a>
             </li>
 
             <li>
@@ -55,25 +57,40 @@
             </li>
 
             <li>
+                <a name="coats">
                 <span class="contrib">W. J. Coats</span>
                 is Professor of Government at Connecticut College where he
                 teaches courses in the history of Western political theory,
-                ancient, medieval and modern.  He is published widely in the
+                ancient, medieval and modern. He is published widely in the
                 field of political theory, especially with regard to the work
                 of the 20th century, English philosophic essayist, Michael
                 Oakeshott.
+                </a>
             </li>
 
             <li>
+                <a name="cowen">
                 <span class="contrib">Nick Cowen</span>
-                is a political scientist with interests in political theory,
-                law and public policy. He wrote his doctoral dissertation at
-                King's College London on the political economy of distributive
-                justice.
-
+                has a PhD from the Department of Political Economy, King’s
+                College London, and degrees from the University of Oxford and
+                University College London. He has written for the <i>American
+                Journal of Political Science</i>, <i>Critical Review</i> and
+                the <i>Review of Austrian Economics</i>.
+                </a>
             </li>
 
             <li>
+                <a name="ferrell">
+                <span class="contrib">Jason Ferrell</span>
+                currently teaches political theory at Concordia University,
+                having also taught McGill University and Mount Allison
+                University. His research interests include the thought of
+                Isaiah Berlin, value pluralism, and distributive justice.
+                </a>
+            </li>
+
+            <li>
+                <a name="garrison">
                 <span class="contrib">Justin D. Garrison</span>
                  is an assistant professor of political
                 science at Roanoke College in Salem, Virginia. He is a
@@ -81,26 +98,30 @@
                 politics and the imagination. He is the author of journal
                 articles, book chapters, and the book <i>An Empire of Ideals:
                     The Chimeric Imagination of Ronald Reagan</i>.
+                </a>
             </li>
 
             <li>
+                <a name="simmons">
                 <span class="contrib">Ryan R. Holston</span>
                  is Associate Professor at Virginia Military
                 Institute in Lexington, VA, where he teaches political theory.
-                He is also an Associate Editor at the journal <i>Humanitas</i>.  Dr.
-                Holston received his Ph.D. from The Johns Hopkins University,
-                his M.Sc. from The London School of Economics and Political
-                Science, and his B.A. from Dickinson College.  His published
-                work appears in journals such as <i>Harvard Theological
-                    Review</i>, <i>Telos</i>, <i>Modern Age</i>, <i>History of
-                    Political Thought</i>, <i>Political Science Reviewer</i>,
-                and <i>Humanitas</i>.  He is currently writing a monograph
-                whose working title is <i>Tradition and the Deliberative
+                He is also an Associate Editor at the journal <i>Humanitas</i>.
+                Dr. Holston received his Ph.D. from The Johns Hopkins
+                University, his M.Sc. from The London School of Economics and
+                Political Science, and his B.A. from Dickinson College. His
+                published work appears in journals such as <i>Harvard
+                Theological Review</i>, <i>Telos</i>, <i>Modern Age</i>,
+            <i>History of Political Thought</i>, <i>Political Science
+                Reviewer</i>, and <i>Humanitas</i>. He is currently writing a
+            monograph whose working title is <i>Tradition and the Deliberative
                 Turn</i> and a co-edited volume entitled <i>The Historical
                 Mind: Humanistic Renewal in a Post-Constitutional Age</i>.
+                </a>
             </li>
 
             <li>
+                <a name="horcher">
                 <span class="contrib">Ferenc Hörcher</span>
                  is a political philosopher and
                 historian of political thought. His PhD was on the Scottish
@@ -113,21 +134,28 @@
                     of the Enlightenment: Aesthetics, Politics, and Religion</i>
                 (2004). Recently he published about the political philosophy of
                 the new Hungarian Fundamental Law.
+                </a>
             </li>
 
             <li>
                 <a name="ikeda">
                 <span class="contrib">Sanford Ikeda</span>
-                </a>
                 is Professor of Economics at SUNY Purchase. He is an
                 internationally recognized scholar of Jane Jacobs' work, and the
                 author of <i>Dynamics of the Mixed Economy: Toward a Theory of
                     Interventionism</i>.
+                </a>
             </li>
 
             <li>
                 <a name="knepper">
                 <span class="contrib">Steven Knepper</span>
+                </a>
+            </li>
+
+            <li>
+                <a name="lowney">
+                <span class="contrib">Charles W. Lowney</span>
                 </a>
             </li>
 
@@ -147,25 +175,27 @@
                 <a name="mcintyre">
                 <span class="contrib">Kenneth B. McIntyre</span>
                  is an associate professor of political
-                science at Sam Houston State University.  He is the author of
+                science at Sam Houston State University. He is the author of
                 <i>The Limits of Political Theory:  Michael Oakeshott on Civil
                     Association</i>,
                 <i>Herbert Butterfield:  History, Providence, and
                     Skeptical Politics</i>,
                 and has also written essays on the
                 philosophy of history, ordinary language philosophy, American
-                constitutionalism, and practical reason.  He is currently
+                constitutionalism, and practical reason. He is currently
                 working on a book on value pluralism, liberty, and the rule of
                 law.
                 </a>
             </li>
 
             <li>
+                <a name="sheahan">
                 <span class="contrib">Luke Sheahan</span>
                 is a Post-Doctoral Associate and Research Fellow in the
                 Department of Political Science at Duke University. He
                 researches the intersection of First Amendment rights and
                 political theory.
+                </a>
             </li>
 
             <li>
@@ -179,6 +209,7 @@
             </li>
 
             <li>
+                <a name="sportiello">
                 <span class="contrib">Daniel John Sportiello</span>
                  is an assistant professor of philosophy
                 at the University of Mary in North Dakota. He has published
@@ -186,10 +217,13 @@
                 Group; he also contributed a chapter on Eric Voegelin to
                 <i>Tradition v. Rationalism: Voegelin, Oakeshott, Hayek, and
                     Others</i>.
+                </a>
             </li>
 
             <li>
+                <a name="wyllie">
                 <span class="contrib">Rob Wyllie</span>
+                </a>
             </li>
 
         </ul>
