--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -85,7 +85,7 @@
             <li>
                 Søren Kierkegaard:
                 <br />
-                    <a href="bios.html#Wyllie">
+                    <a href="bios.html#wyllie">
                     Rob Wyllie
                     </a>
             </li>
@@ -165,7 +165,9 @@
             <li>
                 Gabriel Marcel:
                 <br>
-                Steven Knepper,
+                    <a href="bios.html#knepper">
+                    Steven Knepper,
+                    </a>
                     VMI
             </li>
 
@@ -175,7 +177,7 @@
                 Rationalism Is Irrational 
                 </a>
                 <br />
-                    <a href="bios.html#sportiello">
+                    <a href="bios.html#coats">
                     John Coats,
                     </a>
                     Connecticut College
@@ -183,8 +185,12 @@
 
             <li>
                 Michael Polanyi:
-                Objective Knowledge Is Subjectively Endorsed 
+                Objective Knowledge Is Tacitly Endorsed 
                 <br>
+                    <a href="bios.html#lowney">
+                    Charles W. Lowney,
+                    </a>
+                    Hollins University
             </li>
 
             <li>
@@ -203,7 +209,9 @@
                     Berlin and Moral Monism
                 </a>
                 <br>
+                    <a href="bios.html#ferrell">
                     Jason Ferrell,
+                    </a>
                     <a href="bios.html#ferrell">
                     Concordia University
                     </a>
