Spelled Oakeshott correctly.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -50,8 +50,8 @@
                 <span class="contrib">Gene Callahan</span>
                  has a PhD in political theory from Cardiff
                 University. He is the author of <i>Economics for Real
-                    People</i>, <i>Oakehsott on Rome and America</i>, 
-                and editor of <i>Tradition v. Rationalism</i>. He teaches
+                    People</i>, <i>Oakeshott on Rome and America</i>, 
+                and co-editor of <i>Tradition v. Rationalism</i>. He teaches
                 at New York University.
                 </a>
             </li>
