Fixed misspell of Georgia.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -132,7 +132,7 @@
                     <a href="bios.html#simmons">
                     Jack Simmons,
                     </a>
-                    Georgie Southern
+                    Georgia Southern
             </li>
 
             <li>
