--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -151,6 +151,14 @@
                 <a name="knepper">
                 <span class="contrib">Steven Knepper</span>
                 </a>
+                is an assistant professor in the Department of English,
+                Rhetoric, and Humanistic Studies at Virginia Military
+                Institute.  His research interests include American literature,
+                tragedy, and aesthetics.  His writings have appeared in
+                <i>TELOS</i>, <i>The Robert Frost Review</i>, <i>The Cormac
+                McCarthy Journal</i>, <i>Religion &amp; Literature</i>, and
+                other journals.  He is currently writing about the philosopher
+                William Desmond's approach to literature.
             </li>
 
             <li>
