Cut back Holston bio.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -104,19 +104,15 @@
             <li>
                 <a name="simmons">
                 <span class="contrib">Ryan R. Holston</span>
-                 is Associate Professor at Virginia Military
-                Institute in Lexington, VA, where he teaches political theory.
-                He is also an Associate Editor at the journal <i>Humanitas</i>.
-                Dr. Holston received his Ph.D. from The Johns Hopkins
-                University, his M.Sc. from The London School of Economics and
-                Political Science, and his B.A. from Dickinson College. His
-                published work appears in journals such as <i>Harvard
-                Theological Review</i>, <i>Telos</i>, <i>Modern Age</i>,
-            <i>History of Political Thought</i>, <i>Political Science
-                Reviewer</i>, and <i>Humanitas</i>. He is currently writing a
-            monograph whose working title is <i>Tradition and the Deliberative
-                Turn</i> and a co-edited volume entitled <i>The Historical
-                Mind: Humanistic Renewal in a Post-Constitutional Age</i>.
+                is Professor at Virginia Military Institute where he teaches
+                political theory.  He is also an Associate Editor at the
+                journal <i>Humanitas</i>.  His published work has appeared in
+                journals such as <i>History of Political Thought</i>,
+                <i>Telos</i>, and <i>Harvard Theological Review</i>, among
+                other places.  He is currently writing a monograph whose
+                working title is <i>Tradition and the Deliberative Turn</i> and
+                a co-edited volume entitled <i>The Historical Mind:  Humanistic
+                Renewal in a Post-Constitutional Age</i>.
                 </a>
             </li>
 
@@ -155,7 +151,7 @@
                 Rhetoric, and Humanistic Studies at Virginia Military
                 Institute.  His research interests include American literature,
                 tragedy, and aesthetics.  His writings have appeared in
-                <i>TELOS</i>, <i>The Robert Frost Review</i>, <i>The Cormac
+                <i>Telos</i>, <i>The Robert Frost Review</i>, <i>The Cormac
                 McCarthy Journal</i>, <i>Religion &amp; Literature</i>, and
                 other journals.  He is currently writing about the philosopher
                 William Desmond's approach to literature.
