--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -80,6 +80,21 @@
             </li>
 
             <li>
+                <a name="federici">
+                <span class="contrib">Michael Federici</span>
+                is Professor of Political Science at Middle Tennessee State
+                University and chair of the Department of Political Science and
+                International Relations. He has published five books, <i>The
+                Challenge of Populism</i>, <i>Eric Voegelin: The
+                Restoration of Order</i>, <i>The Political Philosophy of
+                Alexander Hamilton</i>, <i>Rethinking the Teaching of American
+                History</i> (an edited volume), and a co-edited collection of
+                essays entitled, <i>The Culture of Immodesty in American Life and
+                Politics: The Modest Republic</i>.
+                </a>
+            </li>
+
+            <li>
                 <a name="ferrell">
                 <span class="contrib">Jason Ferrell</span>
                 currently teaches political theory at Concordia University,
