--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -218,6 +218,11 @@
             <li>
                 Eric Voegelin:
                 Don't Immanentize the Eschaton
+                <br>
+                    <a href="bios.html#federici">
+                    Michael Federici,
+                    </a>
+                    Middle Tennessee State University
             </li>
 
             <li>
