Added Travis Smith.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -83,6 +83,14 @@
             </li>
 
             <li>
+                Alexis de Tocqueville:
+                <br />
+                    <a href="bios.html#smith">
+                    Travis Smith
+                    </a>
+            </li>
+
+            <li>
                 Søren Kierkegaard:
                 <br />
                     <a href="bios.html#wyllie">
@@ -121,6 +129,15 @@
                     Justin Garrison,
                     </a>
                     Roanoke College
+            </li>
+
+            <li>
+                G.K. Chesterton:
+                <br>
+                    <a href="bios.html#kos">
+                    Eric S. Kos,
+                    </a>
+                    Siena Heights University
             </li>
 
             <li>
