--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -158,6 +158,20 @@
             </li>
 
             <li>
+                <a name="kos">
+                <span class="contrib">Eric S. Kos</span>
+                is associate professor of political science and Chair of the
+                Social Sciences Division at Siena Heights University in Adrian,
+                Michigan.  His work includes essays on Plato, Oakeshott, and
+                von Balthasar, and he has a monograph titled
+                <i>Michael Oakeshott, The
+                    Ancient Greeks and the Philosophical Study of Politics</i>
+                (Imprint Academic, 2007), and is currently editing a collection
+                of essays on Oakeshott, authority, and the state.
+                </a>
+            </li>
+
+            <li>
                 <a name="lowney">
                 <span class="contrib">Charles W. Lowney</span>
                 </a>
@@ -209,6 +223,12 @@
                 University, in Savannah, Georgia. His research focuses on
                 discourse ethics and hermeneutics, leading to publications in
                 bio-ethics, film, television, technology and science.
+                </a>
+            </li>
+
+            <li>
+                <a name="smith">
+                <span class="contrib">Travis Smith</span>
                 </a>
             </li>
 
