Added Lowney and Smith.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -188,7 +188,22 @@
 
             <li>
                 <a name="lowney">
-                <span class="contrib">Charles W. Lowney</span>
+                <span class="contrib">Charles W. Lowney II</span>
+                is an Assistant Professor of Philosophy at
+                Hollins University, Roanoke, Virginia, USA. He received his
+                masters in philosophy at Boston College, where he studied
+                Continental Philosophy, and his doctorate at Boston University,
+                where he studied Analytic Philosophy. He is interested in
+                applying the concepts of emergentism and tacit knowing to
+                ethics, society, and religion, and has done so in articles such
+                as "Authenticity and the Reconciliation of Modernity" (2009),
+                "From Science to Morality" (2009), "Morality: Emergentist
+                Ethics" (2010), "From Morality to Spirituality" (2010), and in
+                a chapter, "Four Ways of Understanding Mysticism" in Mysticism
+                and Silence (forthcoming, Palgrave Macmillan, Laura Weed, ed.).
+                Lowney is also the editor of <i>Charles Taylor, Michael Polanyi
+                and the Critique of Modernity: Pluralist and Emergentist
+                Directions</i> (2017).
                 </a>
             </li>
 
