--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -84,6 +84,7 @@
 
             <li>
                 Alexis de Tocqueville:
+                The Uneasy Friendship Between Reason and Freedom
                 <br />
                     <a href="bios.html#smith">
                     Travis Smith
@@ -202,7 +203,9 @@
 
             <li>
                 Michael Polanyi:
-                Objective Knowledge Is Tacitly Endorsed 
+                <a href="polanyi.html">
+                A Scientist Against Scientism
+                </a>
                 <br>
                     <a href="bios.html#lowney">
                     Charles W. Lowney,
