Added Travis Smith and Jin Jin.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -159,6 +159,20 @@
             </li>
 
             <li>
+                <a name="jin">
+                <span class="contrib">Jin Jin</span>
+                </a>
+                Jin Jin received his BA Honours with Great Distinction in
+                Political Science from Concordia University in 2018, winning
+                the Renée Vautelet Prize as the most outstanding graduating
+                student in his program. He wrote his honours thesis “The Seas
+                to Rove and the Sea of Roving Men: Self-awareness in
+                Tocqueville’s Recollections and Fortnight in the Wilderness”
+                under the supervision of Travis D. Smith. Jin Jin has edited
+                two ESL textbook series for Chinese learners.
+            </li>
+
+            <li>
                 <a name="knepper">
                 <span class="contrib">Steven Knepper</span>
                 </a>
@@ -259,6 +273,11 @@
             <li>
                 <a name="smith">
                 <span class="contrib">Travis Smith</span>
+                is Associate Professor of Political Science at Concordia
+                University in Montreal. he has published on Thomas Hobbes and
+                Francis Bacon, and is the author of <i>Superhero Ethics</i>
+                (Templeton, 2018) and co-editor (with Marlene K. Sokolon) of
+                <i>Flattering the Demos</i> (Lexington, 2018).
                 </a>
             </li>
 
