--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -84,10 +84,16 @@
 
             <li>
                 Alexis de Tocqueville:
+                <a href="tocqueville.html">
                 The Uneasy Friendship Between Reason and Freedom
+                </a>
                 <br />
                     <a href="bios.html#smith">
                     Travis Smith
+                    </a>
+                    and
+                    <a href="bios.html#jin">
+                    Jin Jin
                     </a>
             </li>
 
