Undoubled Jin Jin's name.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -162,7 +162,7 @@
                 <a name="jin">
                 <span class="contrib">Jin Jin</span>
                 </a>
-                Jin Jin received his BA Honours with Great Distinction in
+                received his BA Honours with Great Distinction in
                 Political Science from Concordia University in 2018, winning
                 the Renée Vautelet Prize as the most outstanding graduating
                 student in his program. He wrote his honours thesis “The Seas
