Added D. to Travis Smith

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -272,7 +272,7 @@
 
             <li>
                 <a name="smith">
-                <span class="contrib">Travis Smith</span>
+                <span class="contrib">Travis D. Smith</span>
                 is Associate Professor of Political Science at Concordia
                 University in Montreal. he has published on Thomas Hobbes and
                 Francis Bacon, and is the author of <i>Superhero Ethics</i>
