--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -89,7 +89,7 @@
                 </a>
                 <br />
                     <a href="bios.html#smith">
-                    Travis Smith
+                    Travis D. Smith
                     </a>
                     and
                     <a href="bios.html#jin">
