--- a/LewisOakeshott.html
+++ b/LewisOakeshott.html
@@ -13,9 +13,12 @@
             C.S. Lewis on Rationalism: a Precursor to Oakeshott?
         </h1>
 
+
+        <h3>
+            Abstract
+        </h3>
+
         <p>
-            <b>Abstract:</b>
-            <br />
             C.S. Lewis was a major public intellectual in Britain, beginning
             from the late 1930s and continuing to his death in 1963. In both
             his non-fiction, especially <i>The Abolition of Man</i> (1943), and
@@ -29,6 +32,58 @@
             thread of influence: had Oakeshott been reading Lewis before
             writing his critique of rationalism, and if so, to what extent did
             Lewis's work inform Oakeshott's?
+        </p>
+
+        <h3>
+            Introduction
+        </h3>
+
+        <p>
+            "To some it will appear that I have merely restored under another
+            name what they always meant by basic or fundamental instinct. But
+            much more than a choice of words is involved. The Innovator attacks
+            traditional values (the Tao) in defense of what he at first
+            supposes to be (in some special sense) ‘rational’ or ‘biological’
+            values. But as we have seen, all the values which he uses in
+            attacking the Tao, and even claims to be substituting for it, are
+            themselves derived from the Tao. If he had really started from
+            scratch, from right outside the human tradition of value, no
+            jugglery could have advanced him an inch towards the conception
+            that a man should die for the community or work for posterity. If
+            the Tao falls, all his own conceptions of value fall with it. Not
+            one of them can claim any authority other than that of the Tao.
+            Only by such shreds of the Tao as he has inherited is he enabled
+            even to attack it. The question therefore arises what title he has
+            to select bits of it for acceptance and to reject others. For if
+            the bits he rejects have no authority, neither have those he
+            retains: If what he retains is valid, what he rejects is equally
+            valid too." -- <i>The Abolition of Man</i>
+        </p>
+
+        <p>
+            "What purport to be new systems, or (as they now call them)
+            ‘ideologies,’ all consist of fragments from the Tao itself,
+            arbitrarily wrenched from their context in the whole and then
+            swollen to madness in their isolation, yet still owing to the Tao
+            and to it alone such validity as they possess. If my duty to my
+            parents is a superstition, then so is my duty to posterity. If
+            justice is a superstition, then so is my duty to my country or my
+            race. If the pursuit of scientific knowledge is a real value, then
+            so is conjugal fidelity. The rebellion of new ideologies against
+            the Tao is a rebellion of the branches against the tree: if the
+            rebels could succeed they would find that they had destroyed
+            themselves. The human mind has no more power of inventing a new
+            value than of imagining a new primary colour, or, indeed, of
+            creating a new sun and a new sky for it to move in." -- <i>The
+                Abolition of Man</i>
+        </p>
+
+        <h3>
+            Bibliography
+        </h3>
+
+        <p>
+        http://www.theimaginativeconservative.org/2018/07/c-s-lewis-the-abolition-of-man-progress-bradley-birzer.html
         </p>
 
     </body>
