--- a/LewisOakeshott.html
+++ b/LewisOakeshott.html
@@ -39,6 +39,10 @@
         </h3>
 
         <p>
+            (At the moment I am just collecting material!)
+        </p>
+
+        <p>
             "To some it will appear that I have merely restored under another
             name what they always meant by basic or fundamental instinct. But
             much more than a choice of words is involved. The Innovator attacks
