Adding bio photos.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -54,6 +54,8 @@
                 and co-editor of <i>Tradition v. Rationalism</i>. He teaches
                 at New York University.
                 </a>
+                <br>
+                <img src="graphics/Callahan.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -92,6 +94,8 @@
                 essays entitled, <i>The Culture of Immodesty in American Life and
                 Politics: The Modest Republic</i>.
                 </a>
+                <br>
+                <img src="graphics/Federici.jpg" width="14%" class="center-img">
             </li>
 
             <li>
