Adding more photos to bios.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -133,6 +133,8 @@
                 a co-edited volume entitled <i>The Historical Mind:  Humanistic
                 Renewal in a Post-Constitutional Age</i>.
                 </a>
+                <br>
+                <img src="graphics/Holston.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -174,6 +176,8 @@
                 Tocqueville’s Recollections and Fortnight in the Wilderness”
                 under the supervision of Travis D. Smith. Jin Jin has edited
                 two ESL textbook series for Chinese learners.
+                <br>
+                <img src="graphics/JinJin.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -252,6 +256,8 @@
                 working on a book on value pluralism, liberty, and the rule of
                 law.
                 </a>
+                <br>
+                <img src="graphics/McIntyre.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -283,6 +289,8 @@
                 (Templeton, 2018) and co-editor (with Marlene K. Sokolon) of
                 <i>Flattering the Demos</i> (Lexington, 2018).
                 </a>
+                <br>
+                <img src="graphics/TravisSmith.jpg" width="14%" class="center-img">
             </li>
 
             <li>
