--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -37,6 +37,10 @@
             <a href="bios.html#mcintyre">
             Kenneth McIntyre
             </a>
+            <br />
+            <a href="bios.html">
+                All contributors
+            </a>
         </p>
 
         <p>
