--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -162,6 +162,8 @@
                 author of <i>Dynamics of the Mixed Economy: Toward a Theory of
                     Interventionism</i>.
                 </a>
+                <br>
+                <img src="graphics/Ikeda.jpg" width="14%" class="center-img">
             </li>
 
             <li>
