Adding new photos, bios, etc.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -103,6 +103,9 @@
 
             <li>
                 Søren Kierkegaard:
+                <a href="kierkegaard.html">
+                    Kierkegaard’s Critique of Political Rationalism
+                </a>
                 <br />
                     <a href="bios.html#wyllie">
                     Rob Wyllie
