Added publishing section of website.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -32,6 +32,8 @@
 	<a href="bios.html">Bios</a>
 	&nbsp;|&nbsp;
 	<a href="https://www.springer.com/series/15722">Book Series</a>
+	&nbsp;|&nbsp;
+	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
             Contributor Bios
@@ -107,6 +109,8 @@
                 Journal of Political Science</i>, <i>Critical Review</i> and
                 the <i>Review of Austrian Economics</i>.
                 </a>
+                <br>
+                <img src="graphics/Cowen.jpg" width="14%" class="center-img">
             </li>
 
             <li>
