--- a/AntiRats/gadamer.html
+++ b/AntiRats/gadamer.html
@@ -32,6 +32,8 @@
 	<a href="bios.html">Bios</a>
 	&nbsp;|&nbsp;
 	<a href="https://www.springer.com/series/15722">Book Series</a>
+	&nbsp;|&nbsp;
+	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
             Anti-Rationalism and Hermeneutics
