--- a/AntiRats/pub_details.html
+++ b/AntiRats/pub_details.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Martin Heidegger:  The Limiting Character of the Scientific Method
+            Publishing Details
         </title>
     </head>
 
@@ -36,33 +36,30 @@
 	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
-            Martin Heidegger:  The Limiting Character of the Scientific Method
+            Publishing Details
         </h1>
 
-            <p class="author_info">
-            Jack Simmons
-            </p>
-            
-            <h2>
-            Abstract
-            </h2>
 
+        <ul>
+            <li>
+                <a href="Proposal.pdf">
+                    Proposal to Palgrave
+                </a>
+            </li>
 
-        <p>
-        In the hands of Edmund Husserl and Martin Heidegger, phenomenology
-        became a way of reflecting upon the rigor of philosophy and science.
-        While Husserl aimed at adding rigor to philosophical investigation,
-        Heidegger, more profoundly, reveals the inherent weaknesses of the
-        sciences, such as mathematics, physics and biology, in “obtaining and
-        securing the primary way of access to what are supposedly the objects
-        of this science.” Heidegger claims that the phenomenological method
-        reveals the a priori conditions necessary for the sciences mentioned
-        above, and the inherent weaknesses and blind spots of those
-        disciplines.  In this chapter, I propose to explain Heidegger’s
-        criticism of scientific reasoning along with his call for a more
-        profound approach to thinking that references both medieval and
-        pre-Socratic world-views.
-        </p>
+            <li>
+                <a href="ManuscriptGuidelines.pdf">
+                    Palgrave's Manuscript Guidelines
+                </a>
+            </li>
+
+            <li>
+                <a href="process.html">
+                    Palgrave's Publishing Process
+                </a>
+            </li>
+
+        </ul>
 
     </body>
 </html>
