--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -32,6 +32,8 @@
 	<a href="bios.html">Bios</a>
 	&nbsp;|&nbsp;
 	<a href="https://www.springer.com/series/15722">Book Series</a>
+	&nbsp;|&nbsp;
+	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
             Critics of Enlightenment Rationalism
@@ -200,6 +202,7 @@
 
             <li>
                 Gabriel Marcel:
+                Mystery and Problem, Being and Having
                 <br>
                     <a href="bios.html#knepper">
                     Steven Knepper,
