--- a/AntiRats/macintyre.html
+++ b/AntiRats/macintyre.html
@@ -17,6 +17,8 @@
 	<a href="bios.html">Bios</a>
 	&nbsp;|&nbsp;
 	<a href="https://www.springer.com/series/15722">Book Series</a>
+	&nbsp;|&nbsp;
+	<a href="pub_details.html">Pub. Details</a>
 </p>
         <div style="text-align:center">
             <p>
