--- a/AntiRats/quine.html
+++ b/AntiRats/quine.html
@@ -33,6 +33,8 @@
 	<a href="bios.html">Bios</a>
 	&nbsp;|&nbsp;
 	<a href="https://www.springer.com/series/15722">Book Series</a>
+	&nbsp;|&nbsp;
+	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
             Who’s a Good Dogma?!?: Perspectives on Quine’s Critique of
