Added schedule page.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -304,6 +304,8 @@
                 researches the intersection of First Amendment rights and
                 political theory.
                 </a>
+                <br>
+                <img src="graphics/Sheahan.jpg" width="14%" class="center-img">
             </li>
 
             <li>
