--- a/AntiRats/pub_details.html
+++ b/AntiRats/pub_details.html
@@ -59,6 +59,12 @@
                 </a>
             </li>
 
+            <li>
+                <a href="schedule.html">
+                    Project Schedule
+                </a>
+            </li>
+
         </ul>
 
     </body>
