--- a/AntiRats/pub_details.html
+++ b/AntiRats/pub_details.html
@@ -42,6 +42,12 @@
 
         <ul>
             <li>
+                <a href="schedule.html">
+                    Project Schedule
+                </a>
+            </li>
+
+            <li>
                 <a href="Proposal.pdf">
                     Proposal to Palgrave
                 </a>
@@ -60,9 +66,11 @@
             </li>
 
             <li>
-                <a href="schedule.html">
-                    Project Schedule
+                <a href="Consent.pdf">
+                    Palgrave's Consent to Publish Form
                 </a>
+                <br />
+                Every contributor needs to submit one of these.
             </li>
 
         </ul>
