Added length estimator.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -77,6 +77,10 @@
 
             <li>
                 Blaise Pascal:
+                <br>
+                    <a href="bios.html#mahoney">
+                        Daniel Mahoney
+                    </a>
             </li>
 
             <li>
