--- a/AntiRats/pub_details.html
+++ b/AntiRats/pub_details.html
@@ -48,6 +48,12 @@
             </li>
 
             <li>
+                <a href="word_len.html">
+                    Project Length Estimate
+                </a>
+            </li>
+
+            <li>
                 <a href="Proposal.pdf">
                     Proposal to Palgrave
                 </a>
